tiffany-ui/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_upload_consent_lists_windows_sandbox_log_when_included.snap
---
source: tui/src/bottom_pane/feedback_view.rs
assertion_line: 734
expression: rendered
---
Upload logs?

The following files will be sent:
  • tiffany-logs.log
  • codex-doctor-report.json
  • windows-sandbox.log
  • rollout.jsonl
  • auto-review-rollout.jsonl
